using System.Collections;
using System.Collections.Generic;
using UnityEngine;
[System.Serializable]
public class Wave
{   
    // 敌人的预制体
    public GameObject enemyPrefab;
    // 敌人的数量
    public int count;
    // 生成敌人的速率
    public float rate;
}
